fixing overflow issue in mobile

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -15,6 +15,7 @@ h1, h2, h3, h4, h5, h6 {
 
 html {
   font-size: 25px;
+  overflow-x: hidden;
 }
 
 body {
